added the complete auth system with guards

--- a/src/app/children/signup/signup.component.html
+++ b/src/app/children/signup/signup.component.html
@@ -4,7 +4,7 @@
       {{ error }}
     </div>
     <div class="wrap-login100">
-      <form class="login100-form validate-form" #loginForm=ngForm (ngSubmit)="signIn()">
+      <form class="login100-form validate-form" #signupForm=ngForm (ngSubmit)="signIn()">
         <span class="login100-form-title p-b-26">
           Welcome
         </span>
@@ -25,10 +25,18 @@
           <span class="focus-input100" data-placeholder="Password"></span>
         </div>
 
+        <div class="wrap-input100 validate-input" data-validate="Enter password">
+          <span class="btn-show-pass">
+            <i class="zmdi zmdi-eye"></i>
+          </span>
+          <input class="input100" type="password" name="pass" [(ngModel)]="credentials.password">
+          <span class="focus-input100" data-placeholder="Password"></span>
+        </div>  
+
         <div class="container-login100-form-btn">
           <div class="wrap-login100-form-btn">
             <div class="login100-form-bgbtn"></div>
-            <button class="login100-form-btn" type="submit" [disabled]="!loginForm.valid">
+            <button class="login100-form-btn" type="submit" [disabled]="!signupForm.valid">
               Login 
             </button>
           </div>
