--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  color: #777777;
-  font-family: "Poppins", sans-serif;
-  font-size: 14px;
-  font-weight: 300;
-  line-height: 1.625em;
-  position: relative;
+  margin: 0;
+}
+
+p {
+  margin: 0;
 }
