--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,13 +1,20 @@
-<header class="mdc-top-app-bar">
-  <div class="mdc-top-app-bar__row">
-    <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-      <a href="" class="mdc-top-app-bar__navigation-icon"><i class="zmdi zmdi-font"></i></a>
-    </section>
-    <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
-        <a routerLink="/login" class="mdc-top-app-bar__navigation-icon" *ngIf="!loggedIn">Login</a>
-        <a routerLink="/signup" class="mdc-top-app-bar__navigation-icon" *ngIf="!loggedIn">Signup</a>
-        <a href="#" (click)="logout($event)" class="mdc-top-app-bar__navigation-icon" *ngIf="loggedIn">Logout</a>
-        <a routerLink="/profile" class="mdc-top-app-bar__navigation-icon" *ngIf="loggedIn">Profile</a>
-    </section>
+<nav class="uk-navbar-container uk-margin" uk-navbar="mode: click">
+  <div class="uk-navbar-right">
+
+      <ul class="uk-navbar-nav">
+          <li class="uk-active"><a href="#">Active</a></li>
+          <li>
+              <a href="#">Parent</a>
+              <div class="uk-navbar-dropdown">
+                  <ul class="uk-nav uk-navbar-dropdown-nav">
+                      <li class="uk-active"><a href="#">Active</a></li>
+                      <li><a routerLink="login">Login</a></li>
+                      <li><a href="#">Item</a></li>
+                  </ul>
+              </div>
+          </li>
+          <li><a href="#">Item</a></li>
+      </ul>
+
   </div>
-</header>
+</nav>
