--- a/src/app/children/home/home.component.html
+++ b/src/app/children/home/home.component.html
@@ -1,1 +1,15 @@
 <cp_navbar></cp_navbar>
+<div class="uk-section uk-section-default d-section-h-height d-custom-bg ps-r">
+    <div class="uk-container">
+        <div class="uk-flex uk-flex-center">
+            <div class="play-button">
+                <div uk-icon="play"></div>
+            </div>
+        </div>
+    </div>
+    <div class="video-bar">
+        <div class="video-votes"><span uk-icon="forward"></span> 300k</div>
+        <div class="video-views"><span uk-icon="user"></span> 500k</div>
+    </div>
+</div>
+<!-- section videos of the week ends -->
