--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/uikit/dist/css/uikit.min.css";
+
 body {
   margin: 0;
+  background: #f7f7f7;
+  font-family: Roboto,'Helvetica Neue',Helvetica,Arial,sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.42857;
+  height: 100vh;
+  color: #2d2d2d;
+}
+
+a, .uk-navbar-nav>li>a {
+  font-family: Roboto,'Helvetica Neue',Helvetica,Arial,sans-serif;
 }
 
 p {
   margin: 0;
+}
+
+svg {
+  width: 100% !important;
+  height: 100% !important;
 }
